--- a/index.html
+++ b/index.html
@@ -6,5 +6,79 @@
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light margin">
+            <a class="navbar-brand" href="#">
+                <img src="img/globallabs.jpg" width="120" height="80">
+            </a>
+            <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#servicos">Serviços</a>
+                </li>
+            </ul>
+        </div>
+        </nav>
+
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3 class="margin">Quem Somos</h3>
+                <img src="img/site1.jpg" class="rounded-circle" width="400" height="400">
+                <h3>Somos um time comprometido com os resultados</h3>
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3 class="margin">Parceiros</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/logo-dio.svg" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/logo-dio.svg" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/logo-dio.svg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h3 class="margin">Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <p>As linguagens de programação web são utilizadas especificamente para o desenvolvimentos das camadas de apresentação e de lógica de negócio de web sites, portais e aplicações web em geral. ... O mercado de tecnologia para programadores Web é sempre movimentado.</p>
+                            <img src="img/app.jpg" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <p>As linguagens de programação web são utilizadas especificamente para o desenvolvimentos das camadas de apresentação e de lógica de negócio de web sites, portais e aplicações web em geral. ... O mercado de tecnologia para programadores Web é sempre movimentado.</p>
+                            <img src="img/site1.jpg" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <p>As linguagens de programação web são utilizadas especificamente para o desenvolvimentos das camadas de apresentação e de lógica de negócio de web sites, portais e aplicações web em geral. ... O mercado de tecnologia para programadores Web é sempre movimentado.</p>
+                            <img src="img/site2.jpg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="container-fluid text-center bg-footer margin">
+            <p>Desenvolvido por Jefferson Bruno</p>
+        </footer>
+
+    </body>
 
 </html>
